Releng : build doc gen
Change-Id: I815260a812c825383b6bb55681f72db38139cd08
Signed-off-by: Matthieu Helleboid <matthieu.helleboid@thalesgroup.com>