@@ -347,7 +347,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,install_cots_features,install_ecoretools2,common,PublishStep_7,common_feature,BuildStep_9,PublishStep_10,accuracy_feature,resourcereuse,PublishStep_13,PublishStep_14,resourcereuse_feature,BuildStep_16,PublishStep_17,cadence_feature,report,PublishStep_20,PublishStep_21,PublishStep_22,report_feature,emde,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,PublishStep_32,emde_feature,diagrams,PublishStep_35,diagrams_representation_feature,BuildStep_37,PublishStep_38,composer_feature,BuildStep_40,PublishStep_41,transposer_feature,ad,PublishStep_44,PublishStep_45,PublishStep_46,PublishStep_47,ad_feature,ad_dsl,PublishStep_50,PublishStep_51,addsl_feature,detachment,PublishStep_54,detachment_feature,BuildStep_56,PublishStep_57,PublishStep_58,sdk_feature,kitalpha,fix_eclipse.ini,zip_juno_results" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,install_cots_features,install_ecoretools2,common,PublishStep_7,common_feature,BuildStep_9,PublishStep_10,accuracy_feature,resourcereuse,PublishStep_13,PublishStep_14,resourcereuse_feature,BuildStep_16,PublishStep_17,cadence_feature,report,PublishStep_20,PublishStep_21,PublishStep_22,report_feature,emde,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,PublishStep_32,emde_feature,diagrams,PublishStep_35,diagrams_representation_feature,docgen,PublishStep_38,PublishStep_39,docgen_features,BuildStep_41,PublishStep_42,composer_feature,BuildStep_44,PublishStep_45,transposer_feature,ad,PublishStep_48,PublishStep_49,PublishStep_50,PublishStep_51,ad_feature,ad_dsl,PublishStep_54,PublishStep_55,addsl_feature,detachment,PublishStep_58,detachment_feature,BuildStep_60,PublishStep_61,PublishStep_62,sdk_feature,kitalpha,fix_eclipse.ini,zip_juno_results" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
@@ -610,7 +610,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_37" depends="init,install.buckminster">
+    <target name="docgen" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -626,14 +626,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_37/build.target" />
+                <arg value="${relengDir}/buckminster_docgen/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_37/build.mspec" />
+                <arg value="${relengDir}/buckminster_docgen/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -647,7 +647,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_40" depends="init,install.buckminster">
+    <target name="BuildStep_41" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -663,14 +663,51 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_40/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_41/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_40/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_41/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="BuildStep_44" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_BuildStep_44/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_BuildStep_44/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -795,7 +832,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_56" depends="init,install.buckminster">
+    <target name="BuildStep_60" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -811,14 +848,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_56/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_60/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_56/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_60/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1336,6 +1373,64 @@ This file was generated by Eclipse EGF
 				<arg value="-Dcbi.include.source=true"/>				
 			</globargs>
 			<cmdargs>
+				<arg value="org.polarsys.kitalpha.doc.gen.business.core.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.doc.gen.business.core.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.doc.gen.business.core.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.doc.gen.business.core.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.doc.gen.business.core.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_39" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.kitalpha.doc.gen.business.ecore.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.kitalpha.doc.gen.business.ecore.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.kitalpha.doc.gen.business.ecore.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.kitalpha.doc.gen.business.ecore.feature*/site.p2/*"/>
+				<include name="org.polarsys.kitalpha.doc.gen.business.ecore.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_42" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
 				<arg value="org.polarsys.kitalpha.composer.feature:eclipse.feature#site.p2" />
 			</cmdargs>
 		</buckminster>
@@ -1354,7 +1449,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_41" depends="init,install.buckminster" >
+	<target name="PublishStep_45" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1383,7 +1478,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_44" depends="init,install.buckminster" >
+	<target name="PublishStep_48" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1412,7 +1507,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_45" depends="init,install.buckminster" >
+	<target name="PublishStep_49" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1441,7 +1536,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_46" depends="init,install.buckminster" >
+	<target name="PublishStep_50" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1470,7 +1565,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_47" depends="init,install.buckminster" >
+	<target name="PublishStep_51" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1499,7 +1594,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_50" depends="init,install.buckminster" >
+	<target name="PublishStep_54" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1528,7 +1623,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_51" depends="init,install.buckminster" >
+	<target name="PublishStep_55" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1557,7 +1652,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_54" depends="init,install.buckminster" >
+	<target name="PublishStep_58" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1586,7 +1681,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_57" depends="init,install.buckminster" >
+	<target name="PublishStep_61" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1615,7 +1710,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_58" depends="init,install.buckminster" >
+	<target name="PublishStep_62" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -1710,6 +1805,8 @@ openFile
 				<repository location="file:/${publish}/org.polarsys.kitalpha.runtime.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.ad.services.detachment.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.representation.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.doc.gen.business.core.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.doc.gen.business.ecore.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -2195,6 +2292,44 @@ openFile
                 <arg value="org.polarsys.kitalpha.representation.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.representation.source.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="docgen_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.doc.gen.business.core.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.doc.gen.business.ecore.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.doc.gen.business.core.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.doc.gen.business.core.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.doc.gen.business.ecore.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.doc.gen.business.ecore.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
